syntax = "proto3";
package custommodule;

message SetConfigRequest {
  string newConfig = 1;
}

message SetConfigResponse {
  string updatedConfig = 1;
}

service CustomModule {
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
}
